<resources>
    <string name="app_name">Православный Арзамас</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_temples">Приходы</string>
    <string name="menu_films">Фильмы</string>
    <string name="menu_maps">Карта Храмов</string>
    <string name="menu_feedback">Оставить отзыв</string>
    <string name="menu_sign_up_tour">Записаться на экскурсию</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>