<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_excursions"
            android:icon="@drawable/baseline_church_24"
            android:title="@string/menu_temples" />
        <item
            android:id="@+id/nav_films"
            android:icon="@drawable/baseline_ondemand_video_24"
            android:title="@string/menu_films" />
        <item
            android:id="@+id/nav_churches"
            android:icon="@drawable/map_marker_multiple"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_sign_up_tour"
            android:icon="@drawable/baseline_edit_note_24"
            android:title="@string/menu_sign_up_tour" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/baseline_message_24"
            android:title="@string/menu_feedback" />
    </group>
</menu>